--- a/index.html
+++ b/index.html
@@ -19,6 +19,69 @@
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
+    <main role="main">
+      <section class="intro">
+        <h1 class="intro-title">Learn to code by watching others</h1>
+        <p class="intro-body">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+        <a href="" class="btn">
+          <div class="btn-container">
+            <p class="btn-text">
+              <span class="bold">Try it free for 7 days</span> then $20/mo.
+              thereafter
+            </p>
+          </div>
+        </a>
+      </section>
+      <section class="form-section">
+        <form action="POST" class="form">
+          <label for="first-name">
+            <input
+              type="text"
+              id="first-name"
+              class="first-name"
+              placeholder="First Name"
+            />
+          </label>
+          <label for="last-name">
+            <input
+              type="text"
+              id="last-name"
+              class="last-name"
+              placeholder="Last Name"
+            />
+          </label>
+          <label for="email">
+            <input
+              type="email"
+              id="email"
+              class="email"
+              placeholder="Email Address"
+            />
+          </label>
+          <label for="password">
+            <input
+              type="password"
+              id="password"
+              class="password"
+              placeholder="Password"
+            />
+          </label>
+          <button type="submit" class="submit-btn">
+            Claim your free trial
+          </button>
+        </form>
+        <p class="terms">
+          By clicking the button, you are agreeing to our
+          <a href="" class="terms-link"
+            ><span class="pink bold">Terms and Services</span></a
+          >
+        </p>
+      </section>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
