--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               placeholder="Password"
             />
           </label>
-          <button type="submit" class="submit-btn">
+          <button type="submit" class="btn submit-btn">
             Claim your free trial
           </button>
         </form>
