add required attributes to input fields

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               id="first-name"
               class="first-name"
               placeholder="First Name"
+              required
             />
           </label>
           <label for="last-name">
@@ -52,6 +53,7 @@
               id="last-name"
               class="last-name"
               placeholder="Last Name"
+              required
             />
           </label>
           <label for="email">
@@ -60,6 +62,7 @@
               id="email"
               class="email"
               placeholder="Email Address"
+              required
             />
           </label>
           <label for="password">
@@ -68,6 +71,7 @@
               id="password"
               class="password"
               placeholder="Password"
+              required
             />
           </label>
           <button type="submit" class="btn submit-btn">
