--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           scripted tutorials is great, but understanding how developers think is
           invaluable.
         </p>
+      </section>
+      <section class="form-section">
         <a href="" class="btn">
           <div class="btn-container">
             <p class="btn-text">
@@ -35,14 +37,13 @@
             </p>
           </div>
         </a>
-      </section>
-      <section class="form-section">
-        <form action="POST" class="form">
+        <form name="myForm" class="form">
           <label for="first-name">
             <input
               type="text"
               id="first-name"
               class="first-name"
+              name="fname"
               placeholder="First Name"
               required
             />
@@ -52,6 +53,7 @@
               type="text"
               id="last-name"
               class="last-name"
+              name="lname"
               placeholder="Last Name"
               required
             />
@@ -61,6 +63,7 @@
               type="email"
               id="email"
               class="email"
+              name="email"
               placeholder="Email Address"
               required
             />
@@ -70,6 +73,7 @@
               type="password"
               id="password"
               class="password"
+              name="password"
               placeholder="Password"
               required
             />
@@ -77,13 +81,13 @@
           <button type="submit" class="btn submit-btn">
             Claim your free trial
           </button>
+          <p class="terms">
+            By clicking the button, you are agreeing to our
+            <a href="" class="terms-link"
+              ><span class="pink bold">Terms and Services</span></a
+            >
+          </p>
         </form>
-        <p class="terms">
-          By clicking the button, you are agreeing to our
-          <a href="" class="terms-link"
-            ><span class="pink bold">Terms and Services</span></a
-          >
-        </p>
       </section>
     </main>
     <footer>
@@ -95,5 +99,6 @@
         <a href="https://github.com/davis-matt0" target="_blank">Matt D</a>.
       </p>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
